--- a/members_signup/templates/registration/profile_user.html
+++ b/members_signup/templates/registration/profile_user.html
@@ -8,7 +8,7 @@
 
 <div class="container mt-4 mb-4 d-flex justify-content-center">
     <div class="user-card p-4">
-        {% if user_page.profile_picture %}
+        {% if user_page.profile_picture.url %}
         <div class=" image d-flex flex-column justify-content-center align-items-center"><img src="{{user_page.profile_picture.url}}"  alt="profile pic"/>
         {% else %} 
         <div class=" image d-flex flex-column justify-content-center align-items-center"><img src="{{user_page.profile_picture.url}}" alt="profile pic"/>
