--- a/members_signup/templates/registration/profile_user.html
+++ b/members_signup/templates/registration/profile_user.html
@@ -6,19 +6,20 @@
 
 <div class="profile-section">
 
-<div class="container mt-4 mb-4 d-flex justify-content-center">
+ <div class="user-profile">
     <div class="user-card p-4">
         <div class=" image d-flex flex-column justify-content-center align-items-center">
-            {% if "placeholder" in page_user.profile_pic.url %}
+            {% if "placeholder" in user_page.profile_picture.url %}
             <img src="https://www.odeliver.net/images/members/default.png" class="img-default"
             width="250px" height="auto">
              {% else %} 
             <img src="{{user_page.profile_picture.url}}" alt="profile pic"/>
             {% endif %}        
             <span class="name mt-3">{{ user_page.user.first_name }}</span> <span class="idd">{{ user_page.user.last_name}}</span>
+            <span>{{user_page.bio}}</span> 
+            <div class="text mt-3"> 
+              
             
-            <div class="text mt-3"> <span>{{user_page.bio}}</span> </div>
-            <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> 
                 {%if user_page.facebook_url %}
                 <a href="{{user_page.facebook_url}}" target="_blank"><i class="fa fa-facebook-f"></i></a> |
                 {% endif %}
@@ -37,8 +38,7 @@
             </div>
         </div>
     </div>
-</div>
+  </div>
 </div>
     
 {% endblock %}
-    
