--- a/static/css/style.css
+++ b/static/css/style.css
@@ -870,6 +870,20 @@ transition:0.3s;
     
 }
 
+.profile-section {
+    background-color: #AD9FA4;
+    height: 100vh;
+    width: 100%;
+}
+
+.user-profile {
+    width: 50%;
+    margin: auto;
+    padding-top: 16px;
+    background: #efefef;
+    margin-top: 7px;
+}
+
 .profile-form {
 
     padding-top: 2rem;
@@ -904,7 +918,7 @@ transition:0.3s;
 
 .text span {
     font-size: 20px;
-    color: #545454;
+    color: #0f0d0d;
     font-weight: 500;
 }
 
@@ -1302,7 +1316,14 @@ and (orientation : portrait) {
     }
 
     img.img-default {
-        margin: -1px;
+        height: auto;
+        width: 200px;
+        margin-left: -1px;
+    }
+
+    .image img {
+        width: 149px;
+        object-fit: cover;
     }
 
 
@@ -1326,6 +1347,10 @@ and (orientation : portrait) {
         width: 50%;
     }
     
+    .profile-section {
+        height: 165vh;
+    }
+
     label {
         margin: 10px;
         color:#efefef;
